menustyles.css
/* this page design is losely based off of 
https://cdn.cp.adobe.io/content/2/rendition/10b767ad-f907-4a60-9a5c-97a5bfeae5c2/artwork/ca653153-a4e3-4d55-9929-42424d5ca9ac/version/0/format/jpg/dimension/width/size/300
*/

body{
    background-color: rgba(0, 0, 0, 0.842);
    color:cornsilk;

    margin: 0;
    padding: 0;
      
    box-sizing: border-box;
    font-family: verdana, sans-serif;
}
*{
    font-family: inherit;
    box-sizing: inherit;
    text-shadow: 1px 1px rgba(0, 0, 0, 0.788);
}
.menu_page_container{
    display: grid;
    
    grid-template-rows: 1fr auto;
    grid-template-columns: 1fr;

}

/* NAV */
.nav{
    grid-row: 1;
    grid-column: 1;
}
.nav ul{
  margin: 2px;
  padding: 2px;
  list-style-type: none;
  
  display: flex;

}
.nav ul li{

    color:cornsilk;
    font-size: 16px;
        font-family: verdana, sans-serif;
    
    text-transform: uppercase;
    letter-spacing: 1px;

    width: 150px;
    height: 40px;
}   
a:link,a:visited,a:hover,a:active {
    text-decoration: none;
}
li a:active{
    transition: all 0.05s;
    transform: translateY(1px);
}
li a:hover{
    transition: all .1s;
    letter-spacing: 4px;
    background-color: rgba(0, 0, 0, 0.459);
}
li a{
  color: white;

  float: left;
  display: block;

    width: 150px;

    border-right: solid 2px #EADDC4;
    border-bottom: solid 2px #EADDC4; 
    border-radius: 14px;

  height: 60px;
    background-color:rgba(255, 81, 0, 0.295);

  text-align: center;

  padding: 16px;

}

/* MAIN */
.main{
    grid-column: 1;
    grid-row: 1;

    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto auto auto auto;

}
h1{
    font-size: 4em;

    width: 260px;
    height: 75px;
    
    grid-column: 1;
    grid-row: 1 /  2;

    margin: 74px;
    padding: 0 10px 80px 0;
    
    border-right: double 8px #EADDC4;
    border-bottom: double 8px #EADDC4; 
    border-radius: 10px;

    text-align: end;
    justify-self: end;
    align-self: end;

    text-shadow: 4px 2px rgba(0, 0, 0, 0.788);
}
.pastries{
    grid-row:1 / span 2;
    grid-column: 2;

    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto 1fr;
}
.coffee{
    grid-row: 3;
    grid-column: 1;

    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto 1fr;

}
.tea{
    grid-row: 4;
    grid-column: 2;

    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto 1fr;

}
.h2 {
    grid-row: 1;
    grid-column: 1 / 3;

    display: grid;
    justify-items: center;

    font-size: 40px;    
}
.ul1{
    grid-row: 2;
    grid-column: 1;
}
.ul1 li {
    display: flex;
    justify-content: end;
}
.ul2{
    grid-row: 2;
    grid-column: 2;
}
li{
    font-size: 24px;
    list-style-type: none;
}
.pic_bot_left{
    grid-row: 4;
    grid-column: 1;

    border: solid 2px #EADDC4;
    border-left: none;
    border-bottom: none;
    border-radius: 25px;

    background-color: black;

    display: grid;
    justify-content: center;
    align-content: center;
    text-align: center;
}
.pic_mid_right{
    grid-row: 3;
    grid-column: 2;

    border: solid 2px #EADDC4;
    border-right: none;
    border-radius: 25px;

    background-color: black;

    box-shadow: 8px 8px black;

    display: grid;
    justify-content: center;
    align-content: center;
    text-align: center;
}

/* FOOTER */
.footer{
    grid-row: 2;
    grid-column: 1;
    display: grid;

    background-color: rgba(252, 108, 5, 0.192);
    text-align: center;

    
    border-top: double 8px #EADDC4;
}

/* IMAGES */
img{
    height: 250px;
    width: 250px;

    display: grid;
    align-self: center;
    justify-self: center;

    border: solid 4px rgba(190, 52, 0, 0.479);
    border-radius: 80px;
}
img:hover{
    transition: transform .1s linear;
    transform: scale(1.01) rotateY(15deg);
    box-shadow: 6px 6px 6px rgba(0,0,0,.3); 
}

